# file-size-summary

./: README.md  pyproject.toml
src/file_size_summary/: __main__.py
src/fss/: __init__.py
