[project]
name = "file-size-summary"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Alessandro201" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"fss" = "file_size_summary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/file_size_summary"]
